--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Tian Home
-subtitle:
-description:
+title: 思行斋
+subtitle: 做时间的朋友
+description: Critical Thinking and Practice
 author: Josh
 language:
-timezone:
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://tianjiaqi.xyz
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
