--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,11 @@ category_generator:
 ## Themes: https://hexo.io/themes/
 theme: tiansky
 
+# Search
+search:
+  path: search.xml
+  field: all
+  
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
