--- a/themes/tiansky/_config.yml
+++ b/themes/tiansky/_config.yml
@@ -58,7 +58,8 @@ archive_yearly: true
 copyright: © 2017 tianjiaqi.xyz, All rights reserved.
 
 # Disqus评论shortname，若为空则不启用
-disqus_shortname: littlejixing
+disqus_shortname: #littlejixing
+sohucy_shortname: true
 
 # Google分析track id，若为空则不启用
 google_analytics:
